# innopolis_vtol_dynamics

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  Dockerfile  README.md  catkin_build.sh  catkin_test.sh  package.xml  requirements.txt
.github/workflows/: catkin_build.yml  docker.yml  pylint.yml  tests.yml
cmake/: FindMAVLink.cmake
config/: aerodynamics_coeffs.yaml  hitl_params.params  inno_vtol_dynamics.yaml  multicopter_params.yaml  rviz.rviz  sim_params.yaml  sitl_params.params  vtol_params.yaml
configs/: README.md  ardupilot_cyphal_common_params.yaml  ardupilot_cyphal_gazebo_registers.yaml  ardupilot_dronecan_params.yaml  px4_common.yaml  px4_cyphal.yaml  px4_dronecan.yaml  px4_v1.13_inno_vtol_airframe.yaml  px4_v1.13_quadcopter_airframe.yaml  px4_v1.14_inno_quadcopter_airframe.yaml  px4_v1.14_octorotor_airframe.yaml  px4_v1.14_quadcopter_airframe.yaml  px4_v1.14_vtol_airframe.yaml
configs/ardupilot_cyphal_lua/: cuav_v5.yaml  lua_parameters.yaml
configs/px4/: common.yaml  cyphal.yaml  dronecan.yaml
configs/vehicles/: ap_copter_v4_5_7_dronecan.yaml  px4_v1_12_1_dronecan_vtol.yaml  px4_v1_13_0_dronecan_vtol.yaml  px4_v1_14_0_cyphal_octoplane_vtol.yaml  px4_v1_14_0_cyphal_octorotor.yaml  px4_v1_14_0_cyphal_quadcopter.yaml  px4_v1_14_0_cyphal_quadplane_vtol.yaml  px4_v1_14_0_dronecan_quadplane_vtol.yaml  px4_v1_14_0_dronecan_quadrotor.yaml  px4_v1_15_0_cyphal_octoplane_vtol.yaml  px4_v1_15_0_cyphal_octorotor.yaml  px4_v1_15_0_cyphal_quadcopter.yaml  px4_v1_15_0_cyphal_quadplane_vtol.yaml  px4_v1_15_0_dronecan_quadplane_vtol.yaml  px4_v1_15_0_dronecan_quadrotor.yaml  px4_v1_15_0_mavlink_quadcopter.yaml  px4_v1_15_0_mavlink_quadplane_vtol.yaml
docs/: dev_docs.md
docs/ardupilot/: README.md
docs/px4/: README.md  cyphal.md  dronecan.md  mavlink.md
launch/: dynamics.launch  flight_goggle_sitl.launch  gazebo.launch  node.launch  px4.launch  rviz.launch  sitl.launch  visualization_using_inno_sim.launch
libs/multicopterDynamicsSim/: LICENSE  inertialMeasurementSim.hpp  multicopterDynamicsSim.cpp  multicopterDynamicsSim.hpp
missions/: README.md  delivery_from_kazanexpress_to_technopark.plan  delivery_from_kazanexpress_to_yard.plan  inspection_technopark.plan  square_2_minutes.plan  sviyazhsk_60_minutes.plan  takeoff_and_land.plan
missions/ci/: README.md  square.sh  sviyazhsk_vtol.sh  takeoff_and_land.plan  takeoff_and_land.sh
missions/delivery/: README.md  kazanexpress_to_yard.plan
missions/fault/: README.md
missions/inspection/: README.md  technopark.plan
missions/inspection_vtol/: README.md  (+1 more)
msg/: RawAirData.msg  StaticPressure.msg
params/: ardupilot_cyphal_inno_vtol.params  ardupilot_cyphal_inno_vtol_v3.params  ardupilot_dronecan_inno_vtol.params  ardupilot_v4.3.0_cyphal_inno_vtol.params  ardupilot_v4.4.0_cyphal_inno_vtol.params  ardupilot_v4.4.0_gazebo_cyphal.params  px4_v1.12_dronecan_hitl_inno_vtol.params  px4_v1.12_dronecan_hitl_iris.params  px4_v1.12_sitl_inno_vtol.params  px4_v1.12_sitl_iris.params  px4_v1.13_cyphal_hitl_iris.params  px4_v1.13_dronecan_hitl_inno_vtol.params  px4_v1.13_dronecan_hitl_iris.params  px4_v1.16_sitl_standard_vtol.params
scripts/: airframe_printer.sh  ardupilot_configurator.py  autopilot_configuration.sh  autopilot_configurator.sh  autopilot_configure.py  calibrate_ardupilot_mag.sh  check.py  colors.py  command.py  configurator.py  configure.sh  configure_autopilot.py  create_slcan.sh  cyphal_config.sh  cyphal_config_slcan0.sh  cyphal_config_slcan1.sh  cyphal_port_id.sh  docker.sh  docker_wrapper.py  fake_data_for_uavcan.sh  install.sh  mode.py  model.py  parameters_configurator.py  px4_fmu-v5_cyphal.px4  run.sh  run_sim.sh  sim.py  start_hitl_flight_goggles.sh  start_hitl_inno_vtol.sh  start_sitl_flight_goggles.sh  start_sitl_inno_vtol.sh  test_scenario.sh  uavcan_communicator.py  vehicle.py
src/: cs_converted.hpp  cs_converter.hpp  flightgogglesDynamicsSim.cpp  flightgogglesDynamicsSim.hpp  innopolis_vtol_dynamics_node.cpp  innopolis_vtol_dynamics_node.hpp  mavlink_communicator.cpp  mavlink_communicator.h  multicopterDynamicsSimWrapper.cpp  multicopterDynamicsSimWrapper.hpp  px4_communicator.cpp  px4_communicator.h  sensors_isa_model.hpp  uavDynamicsSimBase.cpp  uavDynamicsSimBase.hpp  vtolDynamicsSim.cpp  vtolDynamicsSim.hpp
uav_dynamics/inno_vtol_dynamics/: CMakeLists.txt  CPPLINT.cfg  catkin_test.sh  package.xml  requirements.txt
uav_dynamics/inno_vtol_dynamics/config/: aerodynamics_coeffs.yaml  flight_goggles_sitl_params.params  hitl_babyshark_standard_vtol.params  hitl_flight_goggles.params  hitl_generic_standard_vtol.params  hitl_inno_vtol.params  hitl_inno_vtol_airspeed26.params  hitl_iris.params  rviz.rviz  sim_params.yaml  sitl_flight_goggles.params  sitl_inno_vtol.params  sitl_params.params  uavcan_params.yaml  vtol_params.yaml
uav_dynamics/inno_vtol_dynamics/include/: cs_converter.hpp  innopolis_vtol_dynamics_node.hpp  mavlink_communicator.h  sensors.hpp  sensors_isa_model.hpp
uav_dynamics/inno_vtol_dynamics/include/dynamics/: flightgogglesDynamicsSim.hpp  uavDynamicsSimBase.hpp  vtolDynamicsSim.hpp
uav_dynamics/inno_vtol_dynamics/launch/: dynamics.launch  hitl.launch  inno_sim.launch  load_parameters.launch  reverse_mixer.launch  rviz.launch  sitl.launch  uavcan_communicator.launch
uav_dynamics/inno_vtol_dynamics/libs/multicopterDynamicsSim/: inertialMeasurementSim.cpp  multicopterDynamicsSim.cpp
uav_dynamics/inno_vtol_dynamics/meshes/: vtol.stl
uav_dynamics/inno_vtol_dynamics/msg/: StaticTemperature.msg
uav_dynamics/inno_vtol_dynamics/scripts/: create_slcan.sh  pub.sh  uavcan_communicator.py
uav_dynamics/inno_vtol_dynamics/src/: flightgogglesDynamicsSim.cpp  inno_vtol_reverse_mixer_node.cpp  innopolis_vtol_dynamics_node.cpp  mavlink_communicator.cpp  sensors.cpp  uavDynamicsSimBase.cpp
uav_dynamics/inno_vtol_dynamics/src/dynamics/: uavDynamicsSimBase.cpp  vtolDynamicsSim.cpp
uav_dynamics/inno_vtol_dynamics/src/tests/: test_isa_model.cpp  test_vtol_dynamics.cpp
uav_dynamics/inno_vtol_dynamics/urdf/: vtol.urdf.xacro
urdf/: vtol.urdf.xacro
(+49 files in other folders)
