<?xml version="1.0"?>
<package format="2">
  <name>innopolis_vtol_dynamics</name>
  <version>0.0.0</version>
  <description>The innopolis_vtol_dynamics package</description>

  <maintainer email="r.fedorenko@innopolis.ru">Roman Fedorenko</maintainer>

  <license>GPLv3</license>

  <author>Roman Fedorenko</author>
  <author>Dmitry Ponomarev</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <!-- Message types used -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>uavcan_msgs</depend>

  <!-- Libraries -->
  <depend>geographiclib_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>
  <depend>uavcan_communicator</depend>

  <!-- Other deps -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>roslib</build_depend>
  <exec_depend>roslib</exec_depend>

  <export>
  </export>
</package>
